# backend/src/routes/uploadRoutes.js
@@ -2,7 +2,7 @@ import express from 'express';
 import { identifyUser } from '../middleware/identifyUser.js';
 import { heavyOperationLimiter } from '../config/rateLimiter.js';
 import { uploadPdf } from '../middleware/uploadMiddleware.js';
-import { deleteDocument, getDocuments, uploadDocument } from '../controllers/uploadController.js';
+import { deleteDocument, getDocuments, uploadDocument, streamDocumentProgress, getDocumentStatus } from '../controllers/uploadController.js';
 
 const router = express.Router();
 
@@ -13,6 +13,8 @@ router.post(
     uploadPdf,
     uploadDocument
 );
+router.get('/progress/:id', identifyUser, streamDocumentProgress);
+router.get('/status/:id', identifyUser, getDocumentStatus);
 router.delete('/:id', identifyUser, deleteDocument);
 router.get('/', identifyUser, getDocuments);
 
